--- a/lingo.css
+++ b/lingo.css
@@ -1,7 +1,7 @@
 body{
 	background-color: #66A5AD;
 }
-div{
+/*div{
 	background-color: white;
 	color: white;
 	padding: 25px;
@@ -65,6 +65,7 @@ div{
 }
 #acht{
 	
-}
+}*/
+
 
 
